<resources>
    <string name="app_name">硄硄</string>
    <string name="secret_key">QiweiSun934</string>
    <string name="details">详情</string>
    <string name="refresh">刷新</string>
    <string name="type">类型</string>
    <string name="type123">类型：</string>
    <string name="loading">加载中</string>
    <string name="search">搜索</string>
    <string name="back">返回</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="no_data">无数据</string>
    <string name="not_login">您未登录</string>
    <string name="not_set">未设置</string>
    <string name="set">设置</string>
    <string name="update_password">更改密码</string>
    <string name="admin_name">用户名</string>
    <string name="wrong_admin_name">用户名格式有误</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="sign_up">注册</string>
    <string name="signup_hint">注册即表示我同意硄硄服务条款内容</string>
    <string name="phone">手机号</string>
    <string name="phonePre">+86</string>
    <string name="old_password">原密码</string>
    <string name="change_password">修改密码</string>
    <string name="change_password_help">密码为4-14位字母与数字的组合</string>
    <string name="password">密码</string>
    <string name="password_sure">确认密码</string>
    <string name="phone_login">手机号登录</string>
    <string name="phone_signup">手机号注册</string>
    <string name="country">国家/地区</string>
    <string name="China">中国</string>
    <string name="sms_number">短信验证码</string>
    <string name="exit">退出</string>
    <string name="if_exit">是否要退出</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="change">修改</string>
    <string name="newpassword">新密码</string>
    <string name="newpassword_confirm">确认新密码</string>
    <string name="write_password">填写密码</string>
    <string name="write_old_password">填写原密码</string>
    <string name="write_newpassword">填写新密码</string>
    <string name="write_newpassword_again">再次填写新密码</string>
    <string name="write_password_again">再次填写密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="input_admin_name">手机号</string>
    <string name="yan_number">验证码</string>
    <string name="code_send_success">验证码发送成功</string>
    <string name="get_sms_number">获取验证码</string>
    <string name="write_phone_number">填写手机号码</string>
    <string name="write_new_phone_number">填写新手机号码</string>
    <string name="choose_way">选择找回类型</string>
    <string name="choose_pay_way">选择支付方式</string>
    <string name="byphone">手机号找回</string>
    <string name="resetpassword">重设密码</string>
    <string name="new_phone_hint">如果手机号不能正常接收短信请联系客服</string>
    <string name="signup_success">恭喜您注册成功</string>
    <string name="email_send_success">邮件发送成功</string>
    <string name="phone_empty">请输入手机号码</string>
    <string name="email_empty">请输入Email</string>
    <string name="wrong_login">用户名或密码错误</string>
    <string name="change_success">修改成功</string>
    <string name="old_new">新密码不可与原密码相同</string>
    <string name="select_countires">选择国家和地区</string>
    <string name="update_phone">更换手机号码</string>
    <string name="new_phone">新手机号</string>
    <string name="update">更改</string>
    <string name="update_confirm">确认更改</string>
    <string name="next">下一步</string>
    <string name="unbind">解除绑定</string>
    <string name="bind">绑定</string>
    <string name="agree">同意</string>
    <string name="accept_protocol">《用户协议》</string>
    <string name="auth_code">验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="sms_auth_code">短信验证码</string>
    <string name="sms_auth_code_tip">短信验证码已发送</string>
    <string name="unbind_success">解绑成功</string>
    <string name="unbind_phone_success">解绑手机号成功</string>
    <string name="set_success">设置成功</string>
    <string name="bind_phone_success">手机号绑定成功</string>
    <string name="upload_dialog_textView">正在上传，请稍候...</string>
    <string name="done">完成</string>
    <string name="confirm">确认</string>
    <string name="missingImage">图片加载失败</string>
    <string name="confirm_password">确认密码</string>
    <string name="agreement">请同意用户协议</string>
    <string name="network_problem">网络连接错误</string>
    <string name="checkup_network">请检查网络连接</string>
    <string name="cannot_enter_info">无法进入个人资料页</string>
    <string name="no_phone">未填写手机号</string>
    <string name="no_input_psd">未填写密码</string>
    <string name="no_input_code">未填写验证码</string>
    <string name="no_confirm_psd">未确认密码</string>
    <string name="confirm_new_psd">确认新密码</string>
    <string name="no_input_new_psd">未填写新密码</string>
    <string name="no_confirm_new_psd">未确认新密码</string>
    <string name="forget_loginpsd">忘记登录密码</string>
    <string name="wrong_phone_number">手机号有误</string>
    <string name="update_phone_number_success">手机号更新成功</string>
    <string name="open_soon">即将开通</string>
    <string name="please_wait">敬请期待</string>
    <string name="submit">提交</string>
    <string name="main_subject">专题</string>
    <string name="main_circle">圈子</string>
    <string name="main_tool">工具</string>
    <string name="main_me">我</string>
    <string name="load_more">加载更多数据</string>
    <string name="refresh_done">数据刷新完成</string>
    <string name="not_login_forbid">您未登录，无法操作</string>
    <string name="release_done_words">已发说说</string>
    <string name="personal_data">个人资料</string>
    <string name="admin_manager">账号管理</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="blank_content">您还未填写任何内容</string>
    <string name="feedback_success">意见反馈成功</string>
    <string name="give_mark">给我们评分</string>
    <string name="clean_cache">清理缓存</string>
    <string name="start_push">启动推送</string>
    <string name="if_clean">是否要清理缓存</string>
    <string name="clean_success">清理成功</string>
    <string name="no_market">您手机没有应用市场</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="change_head_pic">更换头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="birthday">出生年月</string>
    <string name="city">所在城市</string>
    <string name="profession">职业</string>
    <string name="personal_signature">个性签名</string>
    <string name="select_from_album">从相册中选择</string>
    <string name="take_photo">拍照</string>
    <string name="head_pic">头像</string>
    <string name="head_pic_upload_success">头像上传成功</string>
    <string name="not_choose">未选择</string>
    <string name="date_wrong">您选择的日期大于当前日期，请重新选择</string>
    <string name="my_message">我的消息</string>
    <string name="everyday_sign">每日签到</string>
    <string name="my_collect">我的收藏</string>
    <string name="black_list">黑名单</string>
    <string name="my_follows">我的关注</string>
    <string name="follows">关注</string>
    <string name="my_fans">最新粉丝</string>
    <string name="fans">粉丝</string>
    <string name="add_follows">加关注</string>
    <string name="already_follows">已关注</string>
    <string name="add_follows_success">关注成功</string>
    <string name="cannot_add_follow_self">不可关注自己</string>
    <string name="cannot_add_self_black_list">不可将自己加入黑名单</string>
    <string name="delete_black_list">移除黑名单</string>
    <string name="cancel_follow">取消关注</string>
    <string name="delete_success123">移除成功</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="success_cancel_collect">取消收藏成功</string>
    <string name="success_cancel_follow">取消关注成功</string>
    <string name="today">今天</string>
    <string name="release_now">马上发表说说</string>
    <string name="delete_myword">删除该说说</string>
    <string name="delete_the_comment">删除该评论</string>
    <string name="delete_success">删除成功</string>
    <string name="not_too_lazy">主人什么也没留下</string>
    <string name="too_lazy">这个家伙太懒了，什么也没留下</string>
    <string name="check_certificate">查证书</string>
    <string name="measure_hand_size">量手寸</string>
    <string name="price_calculator">价格计算器</string>
    <string name="calculator">计算器</string>
    <string name="try_in">试戴</string>
    <string name="shape">形状</string>
    <string name="color">颜色</string>
    <string name="clarity">净度</string>
    <string name="weight">重量</string>
    <string name="round">圆形</string>
    <string name="special_shape">异形</string>
    <string name="carat">克拉</string>
    <string name="exchange_rate">汇率</string>
    <string name="current_item_exchange_rate">实时汇率</string>
    <string name="calculate">计算</string>
    <string name="weight_error">重量超过上限，应小于11克拉</string>
    <string name="input_weight_please">请填写重量</string>
    <string name="calculating">计算中</string>
    <string name="demanding">查询中</string>
    <string name="calculate_formula">计算公式</string>
    <string name="formula_title">钻石价格=每克拉价x重量x汇率</string>
    <string name="formula_content">[本价格根据RAPAPORT钻石报价表计算，仅供参考，计算结果已经四舍五入取整。]</string>
    <string name="certification_number">证书号</string>
    <string name="demand">查询</string>
    <string name="reset">重置</string>
    <string name="gia_check_certificate">GIA证书查询</string>
    <string name="input_certificate_number">请输入证书号</string>
    <string name="wrong_certificate_number">证书号格式错误</string>
    <string name="certificate_result">查询结果</string>
    <string name="gia_report">GIA检测报告</string>
    <string name="gia_diamond_file">GIA钻石档案</string>
    <string name="gia_certificate_number">GIA证书标号</string>
    <string name="date_of_issue">颁发日期</string>
    <string name="measurement">尺寸</string>
    <string name="cut_grade">切工</string>
    <string name="proportion">比例</string>
    <string name="depth">全身比</string>
    <string name="table">台宽比</string>
    <string name="crown_angle">冠角</string>
    <string name="crown_height">冠高比</string>
    <string name="pavilion_angle">亭角</string>
    <string name="pavilion_depth">亭深比</string>
    <string name="star_length">星小面比</string>
    <string name="lower_half">下腰小面比</string>
    <string name="girdle">腰棱</string>
    <string name="culet">脚尖</string>
    <string name="polish">抛光</string>
    <string name="symmetry">对称</string>
    <string name="fluorescence">荧光</string>
    <string name="clarity_characteristics">净度特征</string>
    <string name="inscription">腰码</string>
    <string name="alltotal">全部</string>
    <string name="jiangxinyike">匠心一克</string>
    <string name="zhexiangyouli">这厢有礼</string>
    <string name="shanyaozhenqing">闪耀真情</string>
    <string name="kuangkuangshuo">硄硄说</string>
    <string name="score_rule">积分规则</string>
    <string name="praise">赞</string>
    <string name="praise_done">已赞</string>
    <string name="cancel_praise_done">已取消赞</string>
    <string name="comment">评论</string>
    <string name="comment_success">评论成功</string>
    <string name="reply_success">回复成功</string>
    <string name="send">发送</string>
    <string name="collect">收藏</string>
    <string name="collect_done">已收藏</string>
    <string name="recent_comment">最新评论</string>
    <string name="all_comment">查看全部评论</string>
    <string name="comment_and_refresh">评论成功，刷新可见</string>
    <string name="reply_and_refresh">回复成功，刷新可见</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="wechat">微信</string>
    <string name="friend_circle">朋友圈</string>
    <string name="praise_success">点赞成功</string>
    <string name="reply">回复</string>
    <string name="please_input_content">请输入内容</string>
    <string name="network_error_cannot_show">网络连接错误，文章无法显示</string>
    <string name="top10">Top10</string>
    <string name="release_word">发布说说</string>
    <string name="about_us_text_title">— 硄硄 —</string>
    <string name="about_us_text1">\t\t\t硄硄希望给所有喜欢珠宝和收藏珠宝的用户，带来的不仅只是珠宝的鉴赏。</string>
    <string name="about_us_text2">\t\t\t更希望你能通过对珠宝的认识使你的生活不再枯、乏味，让你生活更加斑斓多彩。</string>
    <string name="about_us_text3">\t\t\t无论你的生活是幸福、温馨和浪漫的，我们旨在让你在这找到属于自己的一刻时光。</string>
    <string name="about_us_wechat">微信公众号：kuang_2017</string>
    <string name="about_us_phone">服务电话：010-57133977</string>
    <string name="about_us_mail">邮箱：kuangkuang2016@126.com</string>
</resources>