<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/button_height"
    android:background="@drawable/box"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_tv_formula_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/signup__text_m_l_r"
        android:paddingBottom="@dimen/base_margin"
        android:paddingTop="@dimen/signup__text_m_l_r"
        android:text="@string/calculate_formula"
        android:textColor="@color/kuangkuang_yellow"
        android:textSize="@dimen/middle_text_size" />
<View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:layout_marginLeft="@dimen/signup__text_m_l_r"
    android:layout_marginRight="@dimen/signup__text_m_l_r"
    android:background="@color/little_gray"></View>
    <TextView
        android:id="@+id/dialog_tv_formula"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/size_eight"
        android:paddingTop="@dimen/signup__text_m_l_r"
        android:text="@string/formula_title"
        android:textColor="@color/black"
        android:textSize="@dimen/new_title_size" />
    <TextView
        android:id="@+id/dialog_tv_formula_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="@dimen/signup__text_m_l_r"
        android:paddingTop="@dimen/size_eight"
        android:layout_marginBottom="@dimen/size_eight"
        android:text="@string/formula_content"
        android:textColor="@color/ebpay_gray3"
        android:textSize="@dimen/small_middle_text_size" />
</LinearLayout>